Wed Aug 30 21:09:24 CEST 2006  Guillaume Desmottes <cass@skynet.be>

	* src/common/outbound.c:
	* src/common/outbound.h:
	* src/common/dbus/xchat-remote.c:
	* src/common/dbus/example.py:
	* src/common/dbus/marshallers.list:
	* src/common/dbus/Makefile.am:
	* src/common/dbus/dbus-plugin.c:
	* src/common/dbus/CVS/Entries:
	* src/common/dbus/example.c:
	* src/common/dbus/README:
	* src/common/util.c:
	* src/common/proto-irc.c:
	* src/common/xchatc.h:
	* src/common/cfgfiles.c:
	* src/common/text.c
	* src/common/dcc.c:
	* src/common/.cvsignore:
	* src/common/plugin.c:
	* src/common/inbound.c:
	* src/common/server.c:
	* src/common/xchat.c:
	* src/common/CVS/Entries:
	* src/common/xchat.h:
	* src/common/make-te.c:
	* acinclude.m4:
	  - Sync from xchat CVS.

Wed Aug 30 20:03:44 CEST 2006  Guillaume Desmottes <cass@skynet.be>

	* src/fe-gnome/migration.h:
	* src/fe-gnome/migration.c:
	  - Forgot to add these files on the SVN. Sorry dudes.

Mon Aug 28 21:07:09 CEST 2006  Guillaume Desmottes <cass@skynet.be>

	* src/fe-gnome/util.c:
	  - error_dialog (): Enable markups in the error message.
	* src/fe-gnome/migration.h:
	* src/fe-gnome/migration.c:
	* src/fe-gnome/fe-gnome.c:
	* src/fe-gnome/Makefile.am:
	* po/POTFILES.in:
	  - Add migration infrastructure.
	  - Migration path for D-Bus plugin. (#349443)

Mon Aug 21 15:58:19 CEST 2006  Guillaume Desmottes <cass@skynet.be>
	
	* src/fe-gnome/preferences-page-plugins.h:
	* src/fe-gnome/preferences-page-plugins.c:
	* src/fe-gnome/preferences-dialog.h:
	* src/fe-gnome/preferences-dialog.c:
	  - Rename PreferencesPluginsPage to PreferencesPagePlugins.
	  - "GObjectize" PreferencesPagePlugins.

Sun Aug 20 14:35:49 CEST 2006  Guillaume Desmottes <cass@skynet.be>

	* data/xchat-gnome-remote.1:
	* data/Makefile.am:
	  - Remove xchat-gnome-remote's manpage since this
	    executable will not exist anymore after the next sync.

Sat Aug 19 18:06:15 CEST 2006  Guillaume Desmottes <cass@skynet.be>

	* src/fe-gnome/conversation-panel.c: